Ajustado rotina de patch para informacoes sobre o casamento
